# Final-Project

./: .gitignore  .gitmodules  Capstone Project Phase A–23-2-D-17.docx  Capstone Project Phase A–23-2-D-17.pptx  Capstone Project Phase B–23-2-D-17.docx  Capstone Project Phase B–23-2-D-17.pptx  Complexity and pseudo code.docx  User Guide.docx  main.cpp
Code/Common/: CommonStructures.h  ResultsLogger.h  SimpleDataGeneration.cpp  SimpleDataGeneration.h  TestRecipe.h
Code/Common/CommChannels/: ENetCommChannel.cpp  ENetCommChannel.h  ICommChannel.h  LocalFileCommChannelFacade.cpp  LocalFileCommChannelFacade.h  TcpCommChannel.cpp  TcpCommChannel.h  TestedOBCLocalSimulation.cpp  TestedOBCLocalSimulation.h  TestingStationLocalSimCommChannel.cpp  TestingStationLocalSimCommChannel.h  WinTcpCommChannel.cpp  WinTcpCommChannel.h  WinUdpCommChannel.cpp  WinUdpCommChannel.h
Code/Common/DataGeneration/: FullCatalogTestDataGeneration.cpp  FullCatalogTestDataGeneration.h  SimpleDataGeneration.cpp  SimpleDataGeneration.h
Code/Common/Enums/: AlgorithmEnum.h
Code/Common/Logger/: EventLogger.h  ResultsLogger.cpp  ResultsLogger.h
Code/Common/Utils/: SafeQueue.h  Utilities.h
Code/Implementations/: FileReader.h  IRootsFindAlg.h  ITcaAlgorithm.h  TcaCalculation.h
Code/Implementations/ANCAS/: ANCAS.cpp  ANCAS.h
Code/Implementations/CATCH/: CATCH.cpp  CATCH.h  CompanionMatrixRootsFinder.cpp  CompanionMatrixRootsFinder.h  CompanionMatrixRootsFinderArmadillo.h  CompanionMatrixRootsFinderEigen.cpp  CompanionMatrixRootsFinderEigen.h
Code/Implementations/SBO ANCAS/: ISinglePointPropogator.h  SGP4SinglePointGenerator.cpp  SGP4SinglePointGenerator.h  SboAncas.cpp  SboAncas.h
Code/Implementations/SBO_ANCAS/: ISinglePointPropogator.h  SGP4SinglePointGenerator.cpp  SGP4SinglePointGenerator.h  SboAncas.cpp  SboAncas.h  SboAncasEquallySpacedPoints.cpp  SboAncasEquallySpacedPoints.h
Code/Implementations/TestApp/: Implementations.sln
Code/TestedOBCApp/: CHANGELOG.md
Code/TestedOBCApp/CommManager/: CommManager.cpp  CommManager.h
Code/TestedOBCApp/LocalSimulation/: TestedOBCLocalSimulation.cpp  TestedOBCLocalSimulation.h
Code/TestedOBCApp/Main/: AppConfigurationManager.cpp  AppConfigurationManager.h  Factory.cpp  Factory.h  Main.cpp  MainProcess.cpp  MainProcess.h  Version.h
Code/TestedOBCApp/MemoryMonitor/: IMemoryMonitor.h  WinMemoryMonitor.cpp  WinMemoryMonitor.h
Code/TestedOBCApp/TestManager/: TestManager.cpp  TestManager.h
Code/TestedOBCApp/TestedOBCApp/: TestedOBCApp.sln
Code/TestedOBCApp/TestedOBCAppCMake/: CMakeLists.txt  TestedObcAppSettings.INI  build.bat  build_linux.sh  build_win.bat  gpCatalog.txt
Code/TestedOBCApp/Timer/: ChronoBasedTimer.cpp
Code/TestingStationApp/BlazorApp1/: BlazorApp1.sln
Code/TestingStationApp/CommManager/: CommChannelFactory.cpp  CommChannelFactory.h  CommManager.cpp  CommManager.h
Code/TestingStationApp/Database/: DatabaseManager.cpp  DatabaseManager.h
Code/TestingStationApp/Enums/: SatelliteDataFormatEnum.h  TestStatus.h  TimeUnitEnum.h  TleFormatEnum.h
Code/TestingStationApp/Lab/: AppVersion.h  Lab.cpp  Lab.h  LabWrapper.cpp
Code/TestingStationApp/TestDataGenerationManager/: Sgp4Facade.cpp  Sgp4Facade.h  TestDataGenerationManager.cpp  TestDataGenerationManager.h  TestGenerationInfo.cpp  TestGenerationInfo.h
CommChannels/: ICommChannel.h  LocalFileCommChannelFacade.cpp  LocalFileCommChannelFacade.h
Feasability Analysis Results/InputsAndAlgorithmsRuntimeCorrelation/: TestResults_03-05-2024_gem5_400mhz_numberOfPoints_change.xlsx  TestResults_03-05-2024_gem5_400mhz_numberOfPoints_change_raw_data.xlsx  TestResults_04-05-2024_gem5_400mhz_timeInterval_change.xlsx  TestResults_04-05-2024_gem5_400mhz_timeInterval_change_raw_data.xlsx  gem5 System.txt
Feasability Analysis Results/RunTimeComparison/: TestResults_30-04-2024_gem5_400mhz.xlsx  TestResults_30-04-2024_gem5_400mhz_raw_data.xlsx
Feasability Analysis Results/TestingSboAncasErrors/: catalog_29_4_24_12_05_33_utc_Active_Satellites.txt
Implementations/: FileReader.cpp  FileReader.h  IRootsFindAlg.h  ITcaAlgorithm.h  TCA_Calculation.h
Implementations/ANCAS/: ANCAS.cpp  ANCAS.h
Implementations/CATCH/: CATCH.cpp  CATCH.h  CompanionMatrixRootsFinder.cpp  CompanionMatrixRootsFinder.h  CompanionMatrixRootsFinderArmadillo.cpp  CompanionMatrixRootsFinderEigen.cpp  CompanionMatrixRootsFinderEigen.h
Implementations/Implementations/: ANCAS.cpp  ANCAS.h  CATCH.cpp  CATCH.h  FileReader.cpp  FileReader.h  Functions.h  Implementations.cpp  Implementations.vcxproj  Implementations.vcxproj.filters  OrbitalElements.h  TCA_Calculation.h
Implementations/TestApp/: LEMUR2_COSMOS_GAUSS.csv  LEMUR_COSMOS_CONST.csv  LEMUR_COSMOS_GAUSS.csv
ReleasedVersions/TestedObcApp/: BuildAppForX86.sh  InstallGem5Arm.sh  InstallGem5BuildOnlyX86.sh  InstallGem5X86.sh  RunGem5X86.sh  TestedOBCAppX86  TestedObcAppSettings.INI
SGP4/: COSMOS.xml  FindBestStepSize.py  Graph.py  LEMUR2.xml  SGP4.py  SGP4_Alg.docx  SGP_Gen_Data.py  SgpMathUtils.py
SGP4/CPP/: AncasDataGenerator.cpp  AncasDataGenerator.h  CatchDataGenerator.cpp  CatchDataGenerator.h  DataGenerator.cpp  DataGenerator.h  SGP4.h
SGP4/Python/: SGP4.py  SGP_Gen_Data.py
SGP4/data/: LEMUR2_COSMOS_CONST.csv  LEMUR2_COSMOS_GAUSS.csv
Test Data/: COSMOS2251.xml  LEMUR_COSMOS_CONST.csv  LEMUR_COSMOS_GAUSS.csv  SAPHIRE.xml  SAPHIRE_COSMOS_CONST.csv  SAPHIRE_COSMOS_GAUSS.csv  SL3DEB.xml  STARLINK4251.xml  STARLINK_SL3_CONST.csv  STARLINK_SL3_GAUSS.csv  logger_2024-03-21_23-48-04_LOCAL_PC_TEST.csv  test.xlsx  ~$test.xlsx
TestData/: TestResults_30-04-2024_400mhz gem5 raw data.csv
TestedOBCApp/: CHANGELOG.md
TestedOBCApp/CommManager/: CommManager.cpp  CommManager.h
TestedOBCApp/Main/: AppConfigurationManager.h  Factory.cpp  Factory.h  Main.cpp  MainProcess.cpp  MainProcess.h  Version.h
TestedOBCApp/TestManager/: TestDefinitions.h  TestManager.cpp  TestManager.h
TestedOBCApp/Timer/: ChronoBasedTimer.h  ITimer.h  WinTimer.cpp  WinTimer.h
UI/: Active Tests.fxml  Add test.fxml  Test report.fxml  Test result.fxml
UnitTests/UnitTests/: UnitTests.sln
(+113 files in other folders)
